--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,12 @@
 </head>
 
 <body>
+	<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service Worker registered'))
+        .catch(err => console.error('SW registration failed:', err));
+    }
+	</script>
 </body>
 </html>
