--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<script defer src="/app.js"></script>
 	<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
