--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,16 @@
         .catch(err => console.error('SW registration failed:', err));
     }
 	</script>
+
+	<script>
+function showAlert(message, duration = 3000) {
+  const alertBox = document.getElementById("alert");
+  alertBox.textContent = message;
+  alertBox.classList.add("show");
+  setTimeout(() => {
+    alertBox.classList.remove("show");
+  }, duration);
+}
+	</script>
 </body>
 </html>
