--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,6 @@ function showAlert(message, duration = 3000) {
   }, duration);
 }
 	</script>
+	<div id="alert" class="custom-alert"></div>
 </body>
 </html>
