--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<meta content="/og.png" property="og:image">
+	<meta content="https://verdonk.netlify.app/og.png" property="og:image">
 	<meta content="Alat Twibbon Sederhana | Ferry Ayunda" property="og:title">
 	<meta content="https://verdonk.netlify.app/" property="og:url">
 	<meta name="description" content="Ini adalah situs web tempat Anda dapat menambahkan foto ke dalam bingkai.">
