--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
 
 <body>
 	<script defer src="/app.js"></script>
-	<script defer src="/alert.js"></script>
+	<script>
+	function showAlert(message, duration = 3000) { const alertBox = document.getElementById("alert"); alertBox.textContent = message; alertBox.classList.add("show"); setTimeout(() => { alertBox.classList.remove("show"); }, duration); }	
+	</script>
 	<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
