--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 <body>
 	<script defer src="/app.js"></script>
-	<script defer src="/alert.js"></script>
+	<script src="/alert.js"></script>
 	<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
